--- a/distributions/Poisson_Distributions.ipynb
+++ b/distributions/Poisson_Distributions.ipynb
@@ -39,6 +39,8 @@
         "## Take Home Points\n",
         "1. If your data is count data, it is likely Poisson distributed\n",
         "2. If your statistical test assumes variance are equal at all mean values, then you need to square-root your count values to account for heteroscedasticity (variance increases with increasing $\\lambda$ in Poisson distributions)\n",
+        "3. Medians are more appropriate than means for summarising Poisson distributed data.\n",
+        "4. If you want to work out confidence intervals for your median, you will need to do it through bootstrapping\n",
         "---\n",
         "\n",
         "\n",
