--- a/distributions/exercises/Central_Limit_Theorem_and_Continuous_Distributions.ipynb
+++ b/distributions/exercises/Central_Limit_Theorem_and_Continuous_Distributions.ipynb
@@ -465,6 +465,42 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GJltupDKyEGc",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Repeat the exercise with sampling from a population with an exponential distribution (where $\\lambda=4$) and a gamma distribution (where $\\lambda=100$ and $\\alpha=5$) to evaluate the Central Limit Theorem**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kpTMTQQuyUnq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Test with Exponential distribution (hint use `rexp`)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nVE6EZzyy-ww",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Test with Gamma distribution (hint use `rgamma`)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
